[package]
authors = ["anonymous"]
edition = "2018"
license = "Unlicense"
name = "pallet-poe"
version = "0.1.0"

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false }

frame-support = { version = "3.0.0", default-features = false, git = "https://github.com.cnpmjs.org/paritytech/substrate.git", rev = "49a4103" }
frame-system = { version = "3.0.0", default-features = false, git = "https://github.com.cnpmjs.org/paritytech/substrate.git", rev = "49a4103" }
sp-io = { version = "3.0.0", default-features = false, git = "https://github.com.cnpmjs.org/paritytech/substrate.git", rev = "49a4103" }
sp-runtime = { version = "3.0.0", default-features = false, git = "https://github.com.cnpmjs.org/paritytech/substrate.git", rev = "49a4103" }
sp-core = { version = "3.0.0", default-features = false, git = "https://github.com.cnpmjs.org/paritytech/substrate.git", rev = "49a4103" }
sp-std = { version = "3.0.0", default-features = false, git = "https://github.com.cnpmjs.org/paritytech/substrate.git", rev = "49a4103" }

[dev-dependencies]
serde = { version = "1.0.101" }

[features]
default = ["std"]
std = [
    "codec/std",
    "frame-support/std",
    "frame-system/std",
    "sp-std/std",
]
