[package]
name = "pallet-support"
version = "0.1.0"
authors = ["Web3Games Developers"]
edition = "2021"

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive", "max-encoded-len"] }
scale-info = { version = "2.1.2", default-features = false, features = ["derive"] }
log = { version = "0.4.17", default-features = false }
frame-support = {git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.26" , default-features = false }
frame-system = {git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.26" , default-features = false }
sp-io = {git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.26" , default-features = false }
sp-runtime = {git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.26" , default-features = false }
sp-core = {git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.26" , default-features = false }
sp-std = {git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.26" , default-features = false }

primitives = {path = "../../primitives", default-features = false }

[features]
default = ["std"]
std = [
	"codec/std",
	"scale-info/std",
	"log/std",
	"frame-support/std",
	"frame-system/std",
	"sp-std/std",
	"sp-io/std",
	"sp-runtime/std",
	"primitives/std",
	"sp-core/std",
]
