[package]
name = "pallet-token-multi"
version = "0.1.0"
authors = ["Web3Games Developers"]
edition = "2018"

[dependencies]
codec = { package = "parity-scale-codec", version = "2.2.0", default-features = false, features = ["derive", "max-encoded-len"] }
scale-info = { version = "1.0", default-features = false, features = ["derive"] }
serde = { version = "1.0.124", optional = true }


frame-support = { git = "https://github.com/paritytech/substrate", default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate", default-features = false }
sp-io = { git = "https://github.com/paritytech/substrate", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate", default-features = false }
sp-core = { git = "https://github.com/paritytech/substrate", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate", default-features = false }

primitives = { package = "web3games-primitives", path = "../../primitives", default-features = false }


[dev-dependencies]
pallet-balances = { git = "https://github.com/paritytech/substrate" }

[features]
default = ["std"]
std = [
    "serde/std",
    "codec/std",
    "scale-info/std",
    "frame-support/std",
    "frame-system/std",
    "sp-std/std",
    "sp-io/std",
    "sp-runtime/std",
    "primitives/std",
    "sp-core/std",
]
