[package]
name = "pallet-wrap-currency"
version = "0.1.0"
authors = ["Web3Games Developers"]
edition = "2018"

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
serde = { version = "1.0.124", optional = true }

frame-support = { git = "https://github.com/paritytech/substrate", default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate", default-features = false }
sp-io = { git = "https://github.com/paritytech/substrate", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate", default-features = false }
sp-core = { git = "https://github.com/paritytech/substrate", default-features = false }

orml-traits = { default-features = false, git = "https://github.com/web3gamesofficial/open-runtime-module-library", branch = "web3games-v0.2" }

primitives = { package = "web3games-primitives", path = "../../primitives", default-features = false }
pallet-token-fungible = { path = "../token/fungible", default-features = false }

[features]
default = ["std"]
std = [
    "codec/std",
    "serde/std",
    "frame-support/std",
    "frame-system/std",
    "sp-runtime/std",
    "sp-io/std",
    "sp-std/std",
    "sp-core/std",
    "orml-traits/std",
	"primitives/std",
	"pallet-token-fungible/std",
]
