[package]
name = "pallet-wrap-currency"
version = "0.1.0"
authors = ["Web3Games Developers"]
edition = "2021"

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive"] }
scale-info = { version = "2.0.1", default-features = false, features = ["derive"] }
serde = { version = "1.0.124", optional = true }
log = { version = "0.4.14", default-features = false }
frame-support = { git = "https://github.com/paritytech/substrate", default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate", default-features = false }
sp-io = { git = "https://github.com/paritytech/substrate", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate", default-features = false }
sp-core = { git = "https://github.com/paritytech/substrate", default-features = false }

primitives = { package = "web3games-primitives", path = "../../primitives", default-features = false }
pallet-token-fungible = { path = "../token-fungible", default-features = false }

[dev-dependencies]
pallet-balances = { git = "https://github.com/paritytech/substrate" }
frame-support-test = { git = "https://github.com/paritytech/substrate" }

[features]
default = ["std"]
std = [
	"codec/std",
	"scale-info/std",
	"serde/std",
	"frame-support/std",
	"frame-system/std",
	"sp-runtime/std",
	"sp-io/std",
	"sp-std/std",
	"sp-core/std",
	"primitives/std",
	"pallet-token-fungible/std",
]
