[package]
name = "precompile-utils"
version = "0.1.0"
authors = ["PureStake", "Web3Games Developers"]
edition = "2021"

[dependencies]
log = "0.4.17"
sha3 = { version = "0.9", default-features = false }
num_enum = { version = "0.5.3", default-features = false }

sp-std = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.23", default-features = false }
sp-core = { git = "https://github.com/paritytech/substrate",branch = "polkadot-v0.9.23",  default-features = false }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.23", default-features = false }
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false }
frame-support = { git = "https://github.com/paritytech/substrate",branch = "polkadot-v0.9.23",  default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate",branch = "polkadot-v0.9.23",  default-features = false }

fp-evm = { default-features = false, git = "https://github.com/web3gamesofficial/frontier", branch = "polkadot-v0.9.23" }
pallet-evm = { default-features = false, git = "https://github.com/web3gamesofficial/frontier", branch = "polkadot-v0.9.23" }

precompile-utils-macro = { path = "macro" }

[dev-dependencies]
hex-literal = "0.3.1"

[features]
default = ["std"]
std = [
	"codec/std",
	"sp-std/std",
	"sp-core/std",
	"sp-io/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-evm/std",
	# "evm/std",
]
